# terravault

./: .gitignore  Anchor.toml  Cargo.toml  README.md
app/: index.html
app/src/: App.tsx  main.tsx
app/src/hooks/: useAuth.ts  useInvestorPosition.ts  useTransaction.ts
app/src/idl/: terravault.json
app/src/lib/: anchor.ts  constants.ts  pda.ts
app/src/pages/: DeveloperDashboard.tsx  DeveloperProjectManage.tsx  InvestorDashboard.tsx  ProjectListing.tsx
app/src/store/: wallet.ts
app/src/types/: project.ts
backend/: go.sum
backend/cmd/api/: main.go
backend/internal/anchor/: idl.go
backend/internal/api/: blacklist.go  handlers_admin.go  (+2 more)
docs/: api.md  architecture.md  description.md  product.md  roadmap.md
frontend/: package-lock.json  package.json  tailwind.config.ts  vite.config.ts
frontend/src/: index.css
oracle/: README.md  go.mod
programs/terravault/: Cargo.toml
programs/terravault/src/: constants.rs  errors.rs  events.rs  lib.rs
programs/terravault/src/instructions/: activate_project.rs  add_milestone.rs  admin_resolve.rs  buy_tokens.rs  cancel_fundraise.rs  claim_distribution.rs  claim_refund.rs  deposit_income.rs  dispute_milestone.rs  flag_developer.rs  freeze_developer.rs  initialize_project.rs  mod.rs  pause_project.rs  raise_dispute.rs  release_milestone_funds.rs  resolve_dispute.rs  start_fundraising.rs  submit_evidence.rs  submit_milestone_proof.rs  transfer_hook.rs  update_oracle.rs
programs/terravault/src/state/: developer.rs  distribution.rs  investor.rs  milestone.rs  mod.rs  project.rs  token_config.rs
(+43 files in other folders)
